[PN-14792] Align with develop