@@ -1,28 +1,30 @@
 package it.pagopa.pn.timelineservice.service.impl;
 
-    import it.pagopa.pn.timelineservice.dto.notification.NotificationInfoInt;
-    import it.pagopa.pn.timelineservice.dto.notification.status.NotificationStatusHistoryElementInt;
-    import it.pagopa.pn.timelineservice.dto.notification.status.NotificationStatusInt;
-    import it.pagopa.pn.timelineservice.dto.timeline.TimelineElementInternal;
-    import it.pagopa.pn.timelineservice.service.StatusService;
-    import it.pagopa.pn.timelineservice.utils.StatusUtils;
-    import lombok.extern.slf4j.Slf4j;
-    import org.springframework.stereotype.Service;
-    import java.time.Instant;
-    import java.util.List;
-    import java.util.Set;
+import it.pagopa.pn.timelineservice.dto.ext.notification.NotificationInt;
+import it.pagopa.pn.timelineservice.dto.ext.notification.status.NotificationStatusHistoryElementInt;
+import it.pagopa.pn.timelineservice.dto.ext.notification.status.NotificationStatusInt;
+import it.pagopa.pn.timelineservice.dto.timeline.TimelineElementInternal;
+import it.pagopa.pn.timelineservice.service.StatusService;
+import it.pagopa.pn.timelineservice.utils.StatusUtils;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 
-    @Slf4j
-    @Service
-    public class StatusServiceImpl implements StatusService {
-        private final StatusUtils statusUtils;
+import java.time.Instant;
+import java.util.List;
+import java.util.Set;
 
-        public StatusServiceImpl(StatusUtils statusUtils) {
-            this.statusUtils = statusUtils;
-        }
+
+@Slf4j
+@Service
+public class StatusServiceImpl implements StatusService {
+    private final StatusUtils statusUtils;
+
+    public StatusServiceImpl(StatusUtils statusUtils) {
+        this.statusUtils = statusUtils;
+    }
 
     @Override
-    public NotificationStatusUpdate computeStatusChange(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInfoInt notification) {
+    public it.pagopa.pn.timelineservice.service.StatusService.NotificationStatusUpdate computeStatusChange(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInt notification) {
         log.debug("computeStatusChange Notification is present paProtocolNumber {} for iun {}", notification.getPaProtocolNumber(), dto.getIun());
 
         // - Calcolare lo stato corrente
@@ -41,7 +43,7 @@ package it.pagopa.pn.timelineservice.service.impl;
 
 
     @Override
-    public NotificationStatusUpdate getStatus(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInfoInt notification) {
+    public NotificationStatusUpdate getStatus(TimelineElementInternal dto, Set<TimelineElementInternal> currentTimeline, NotificationInt notification) {
         log.debug("checkStatus is present paProtocolNumber {} for iun {}", notification.getPaProtocolNumber(), dto.getIun());
 
         NotificationStatusUpdate notificationStatusUpdate = computeStatusChange(dto, currentTimeline, notification);
@@ -53,14 +55,15 @@ package it.pagopa.pn.timelineservice.service.impl;
         return new NotificationStatusUpdate(currentState, nextState);
     }
 
-    private NotificationStatusHistoryElementInt computeLastStatusHistoryElement(NotificationInfoInt notification, Set<TimelineElementInternal> currentTimeline) {
-        int numberOfRecipient = notification.getRecipientsCount();
+    private NotificationStatusHistoryElementInt computeLastStatusHistoryElement(NotificationInt notification, Set<TimelineElementInternal> currentTimeline) {
+        int numberOfRecipient = notification.getRecipients().size();
         Instant notificationCreatedAt = notification.getSentAt();
         List<NotificationStatusHistoryElementInt> historyElementList = statusUtils.getStatusHistory(
                 currentTimeline,
                 numberOfRecipient,
                 notificationCreatedAt);
 
-            return historyElementList.getLast();
-        }
+        return historyElementList.get(historyElementList.size() - 1);
     }
+
+}
